v1.99.4
----------------------------------------------------------------------------------------------------
 * tls-alpn-01 challenge method, when available, is now preferred.
 * configure now checks the libcurl version to be at least 7.50, as does the Apache configure.

v1.99.3
----------------------------------------------------------------------------------------------------
 * OpenSSL initialization disabled in the module. Leaving that to mod_ssl/APR.
 * mod_ssl trunk patch is now empty, changes have been committed into Apache trunk.
 * ACME order/challenge cleanup now runs immediately after a successful renewal and does
   not wait for a server restart. 

v1.99.2
----------------------------------------------------------------------------------------------------
 * fixed bug where a new ACME account was created for each new ACME managed domain when the existing
   accounts did not exist or were no longer valid/applicable.

v1.99.1
----------------------------------------------------------------------------------------------------
 * adding test cases for migrating MDs from ACMEv1 to ACMEv2
 * adding test case for checks that missing "acme-tls/1" protocol config is detected
 * removing version number for local ACME account storage again (added in v1.99.0). An account
   is only suitable for an ACME server if it matches the directory url exactly.
 * export symbols in the module are restricted to reduce size a bit

v1.99.0
----------------------------------------------------------------------------------------------------
  * EXPERIMENTAL, EARLY support for the ACMEv2 protocol. Not enabled by default, see README.md.
  * mod_md checks for each domain if the 'Protocols' directive allows the 'acme-tls/1' protocol.
    Only then is the challenge method 'tls-alpn-01' enabled for a MD.
  * first successful tls-alpn-01 test
  * test_700 auto tests now working as test_702 for ACMEv2
  * test_600 roundtrip tests now working as test_602 for ACMEv2