@@ -1,3 +1,9 @@
+ * When the ACME server threw its challenges at us, we selected the first among the 
+   configured/supported ones and ran that. When it failed, the whole authorization
+   failed until the retry kicked in. Now, on a failed challenge startup, we look for the
+   next possible challenge type and try that.
+ * configure updated to better work with non-standard curl library locations.
+
 v1.99.4
 ----------------------------------------------------------------------------------------------------
  * tls-alpn-01 challenge method, when available, is now preferred.
